<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/contact_image_description"
        android:src="@drawable/defaulticon" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="7"
        android:hint="@string/first_name"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:ems="7"
        android:hint="@string/last_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="16dp"
        android:text="@string/birthday_hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#1ec295" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/date" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number_hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#1ec295" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/phone_number_hint" />

</RelativeLayout>